--- a/index.html
+++ b/index.html
@@ -21,7 +21,14 @@
       </section>
 
     </main>
-    <footer>
-
+    <footer class="footer">
+        <nav class="footer__links">
+          <a class="footer__link" href="https://yandex.ru/maps" target="_blank">Карты</a>
+          <a class="footer__link" href="https://yandex.ru/pogoda" target="_blank">Погода</a>
+          <a class="footer__link" href="https://rasp.yandex.ru" target="_blank">Расписание</a>
+          <a class="footer__link" href="https://calendar.yandex.ru" target="_blank">Календарь</a>
+          <a class="footer__link" href="https://travel.yandex.ru" target="_blank">Путешествия</a>
+        </nav>
+        <p class="footer__copyright">&copy; 2022. Виталий Костин</p>
     </footer>
 </body>
