--- a/index.html
+++ b/index.html
@@ -9,15 +9,57 @@
   <link rel="stylesheet" href="./pages/index.css">
 </head>
 <body class="page">
-    <header>
- 
+    <header class="header">
+      <img class="header__logo" src="./images/header-logo.svg" alt="Россия, иконка карты">
+      <ul class="header__lang">
+        <li>
+          <a class="header__lang-link header__lang-link_active" href="#">Ru</a>
+        </li>
+        <li>
+          <a class="header__lang-link" href="#">En</a>
+        </li>
+      </ul>
     </header>
     <main class="content page__content">
+      <section class="lead">
+        <h1 class="lead__title">Путешествия по&nbsp;России</h1>
+        <p class="lead__subtitle">Настоящая страна не&nbsp;в&nbsp;выпусках новостей, а&nbsp;здесь.</p>
+        <img class="lead__image" src="./images/lead-polka.jpg" alt="Маршрут от Пскова до Улан-удэ с попутными городами, спящий пасажит в вагоне">
+        <p class="lead__caption">ваша полка — верхняя</p>
+      </section>
+      <section class="intro">
+        <h2 class="intro__title">Чего мы там не видели?</h2>
+        <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36%
+          планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На
+          самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами
+          Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без
+          миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера
+          Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их
+          в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и
+          описали некоторые интересные места, достойные вашего отпуска.</p>
+        <ul class="intro__list">
+          <li>
+            Часовых поясов<span class="intro__list-digit"> 11</span>
+          </li>
+          <li>
+            Объектов природного наследия ЮНЕСКО<span class="intro__list-digit"> 12</span>
+          </li>
+          <li>
+            Объектов культурного наследия ЮНЕСКО<span class="intro__list-digit"> 16</span>
+          </li>
+          <li>
+            Природных заповедников<span class="intro__list-digit"> 105</span>
+          <li>
+            Аэропортов<span class="intro__list-digit"> 241</span>
+          </li>
+        </ul>
+      </section>
+
       <section class="cover content__section">
-          <a class="cover__item" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
-            <h2 class="cover__title">До&nbsp;Байкала &laquo;на&nbsp;собаках&raquo;</h2>
-            <p class="cover__subtitle">По&nbsp;мотивам учебной темы о&nbsp;Транссибе&nbsp;&mdash; путешествие от&nbsp;столицы до&nbsp;Байкала на&nbsp;электричках.</p>
-          </a>
+        <a class="cover__item" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
+        <h2 class="cover__title">До&nbsp;Байкала &laquo;на&nbsp;собаках&raquo;</h2>
+        <p class="cover__subtitle">По&nbsp;мотивам учебной темы о&nbsp;Транссибе&mdash; путешествие от&nbsp;столицы до&nbsp;Байкала на&nbsp;электричках.</p>
+        </a>
       </section>
 
     </main>
@@ -32,3 +74,4 @@
         <p class="footer__copyright">&copy; 2022. Виталий Костин</p>
     </footer>
 </body>
+</html>
