--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </header>
 
   <main class="content page__content">
-    <section class="lead" class="content__section">
+    <section class="lead">
       <h1 class="lead__title">Путешествия по&nbsp;России</h1>
       <p class="lead__subtitle">Настоящая страна не&nbsp;в&nbsp;выпусках новостей, а&nbsp;здесь.</p>
       <img class="lead__image" src="./images/lead-polka.jpg" alt="Маршрут от Пскова до Улан-удэ с попутными городами, спящий пасажит в вагоне">
