--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <p class="lead__caption">ваша полка — верхняя</p>
     </section>
 
-    <section class="intro">
+    <section class="intro content__section">
       <h2 class="intro__title">Чего мы&nbsp;там не&nbsp;видели?</h2>
       <p class="intro__text">
         По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36%
